删除无用的代码

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -223,7 +223,7 @@ var loginAjax = {
 	                                  $.cookie('userName', "admin", { expires: expire, path: '/' });
 	                                  $.cookie('userId', "1", { expires: expire, path: '/' });
 	                                  
-	                              window.location.href=ctx+"/adminIndex.html";
+	                              window.location.href=ctx+"/index.html";
 	                          }
 	                      },
 	                      error: function(data){
