添加jenkins job配置信息

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -118,6 +118,7 @@
                     {field:'job_NAME',title:'任务名称', sortable:true},
                     {field:'git_URL',title:'GIT地址', sortable:true},
                     {field:'git_BRANCH',title:'分支名称', sortable:true},
+                    {field:'is_USE_GIT_TAG',title:'是否使用git tag', sortable:true},
                     {field:'git_CREDIT',title:'jenkins凭据参数', sortable:true},
                     {field:'is_RUN_SONAR',title:'是否执行sonar扫描', sortable:true},
                     
